# CoqStoq

./: .gitignore  .gitmodules  Dockerfile  README.md  api.py  assignment.json  commits.json  coqstoq.opam  example-sft.json  example.py  gen_rl.py  gen_sft.py  pyproject.toml  test_checkpoint_vllm.ipynb  test_checkpoint_vllm.py  train-rl-theorems.json  train-sft-theorems.json  val-theorems.json
coqstoq/: __init__.py  build_projects.py  check.py  compile_args.py  create_theorem_lists.py  create_train_theorem_lists.py  eval_thms.py  find_eval_thms.py  predefined_projects.py  scripts.py
coqstoq/checker_server/: lsp_client.py  problem_server.py  server.py
coqstoq/index_thms/: eval_thms.py  find_eval_thms.py
coqstoq/preprocess/: assign_repos.py  download_repos.py  move_repos.py
tests/: augment_coq.py  coq_example.py  f*_example.py  test_checking.py  test_coqstoq.py  test_coqstoq_state.py  test_errors.py  test_find_thms.py
train-rl-theorems/0918nobita-@@-Coq/: basics.json  example.json  reverse_list.json
train-rl-theorems/0Ccipher-@@-proofs/: util.json
train-rl-theorems/10ca1h0st-@@-SomeThings/: apply_injection_discriminate.json
train-rl-theorems/10ca1h0st-@@-coq_book/: coqbook.json  sf.json
train-rl-theorems/1123sodium-@@-coq-practice/: Heine_Borel.json
train-rl-theorems/1337777-@@-cartier/: cartierSolution1.json  cartierSolution7.json
train-rl-theorems/2654651329-@@-SF/: Basics.json
train-rl-theorems/AKKID-@@-If/: Basics.json  Maps.json
train-rl-theorems/Ablach-@@-CoqArt_exercises/: ch5.json
train-rl-theorems/Admasnd-@@-formalverif/: filter.json  (+2 more)
(+9957 files in other folders)
